--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1084,3 +1084,11 @@ section.product-list-slider button.slick-arrow.slick-next {
   background-size: cover;
   background-position: center;
 }
+
+.bg-img-3 {
+  background-image: url('../assets/images/6a5we4f65s1rgh65dsr1th65rd1t.png');
+  background-size-x: 100%;
+  background-position-x: center;
+  background-position-y: bottom;
+  background-repeat: no-repeat;
+}
