rich froning page changes

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -790,6 +790,11 @@ button.free-gift-label {
   background-position-y: -1px;
 }
 
+.bg-multicolor{
+  background-image: url('../assets/images/Hatbandnew.png');
+  background-position-y: -1px;
+}
+
 .bg-img-1 {
   background-image: url('../assets/images/7e71e7e2ec1626d4804f1c249d678982.jpg');
 }
