--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -989,7 +989,7 @@ section.product-list-slider button.slick-arrow.slick-next {
 
 .sticky-header {
   @apply visible opacity-100 translate-y-0 transition-transform duration-[0.2s] ease-linear shadow-[0_2px_10px_2px_#0000000f] fixed z-[99] border-b-[rgba(29,29,29,0.1)] border-b border-solid left-0 top-0;
-  background: #FFF !important;
+  background: #fff !important;
   position: fixed !important;
 }
 
@@ -1095,6 +1095,12 @@ section.product-list-slider button.slick-arrow.slick-next {
 
 .bg-free-preview-banner-left {
   @apply bg-[url('../assets/images/ds4f6g4a6ef46awef163as1g3rsdfg.jpg')];
+  background-size: cover;
+  background-position: center;
+}
+
+.bg-img4 {
+  @apply lg:bg-[url('../assets/images/3yg12j3dr2tyh13d2rty13dh.png')] bg-[url('../assets/images/gui1k3d2t1hy36dr2t1gh3dr2th.png')];
   background-size: cover;
   background-position: center;
 }
