--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -726,10 +726,10 @@ button.free-gift-label {
   background-position-y: 0;
 }
 
-.black-horizontal{
+.black-horizontal {
   background-image: url('../assets/images/blackhorizontallines-wallpaper-.png');
   background-repeat: no-repeat;
-  background-color: #EFEEED;
+  background-color: #efeeed;
   background-size: cover;
   background-position-y: 0;
 }
@@ -798,7 +798,7 @@ button.free-gift-label {
   background-position-y: -1px;
 }
 
-.bg-multicolor{
+.bg-multicolor {
   background-image: url('../assets/images/Hatbandnew.png');
   background-position-y: -1px;
 }
@@ -1120,4 +1120,8 @@ section.product-list-slider button.slick-arrow.slick-next {
 
 .bg-heat-eat {
   @apply lg:bg-[url('../assets/images/_JustMeats_StyledProduct_Stills_Full.jpg')] bg-[url('../assets/images/JustMeats_StyledProduct_Stills_FullRes_Vertical.png')] bg-no-repeat bg-cover lg:pb-[0] pb-[280px] lg:bg-center bg-bottom;
+}
+
+.bg-sage-valley {
+  @apply lg:bg-[url('../assets/images/sage-valley-banner-image.png')] bg-[url('../assets/images/sage-valley-banner-image-mobile.png')] bg-no-repeat bg-cover lg:pb-[0] pb-[280px] lg:bg-center bg-bottom;
 }
